В шапке сайта добавлена кнопка вниз, дополнена основная часть сайта

--- a/index.html
+++ b/index.html
@@ -9,11 +9,33 @@
 <body>
     <header>
         <h1>Освоение ГИТ</h1>
+        <div class="menu">
+            <a href="#">
+            <a href="#down"
+                        ><button>
+                            <svg
+                                width="16"
+                                height="16"
+                                viewBox="0 0 16 16"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    fill-rule="evenodd"
+                                    clip-rule="evenodd"
+                                    d="M2.5 4L1 5.5L8 12.5L15 5.5L13.5 4L8 9.5L2.5 4Z"
+                                    fill="black"
+                                />
+                            </svg>
+                            Вниз страницы
+                </button></a>
     </header>
     <main>
         <div class="img_1">
             <img class="img_1" src="./img/1.jpg" alt="окно виндоус">
         </div>
+
     </main>
+    <div id="down">Спасибо за внимание</div>
 </body>
 </html>
